# aw-inbox

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  inbox.py  package.json  pyproject.toml
aw_inbox/: flomo.py  inbox.py  main.py
migrations/: 20240101000000_create_notes_table.sql
src/: db.rs  lib.rs  main.rs  models.rs
src/utils/: tagUtils.js
tests/: curl_test.sh  integration_http_test.rs  integration_test.rs  note_crud_test.rs  test_inbox.py
