[package]
name = "aw-inbox-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.30", features = ["chrono", "serde_json", "bundled"]  }
